--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pymongo==4.8.0
 motor==3.5.1 
 marshmallow==3.18.0 
 umongo==3.1.0 
-git+https://github.com/Joelkb/cinemagoer 
+cinemagoer 
 Heroku3 
 search_engine_parser 
 wget 
@@ -50,6 +50,7 @@ apscheduler
 pyshorteners 
 pyromod 
 colorama
+
 
 
 
