--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 pyrofork==2.3.43 
-https://codeload.github.com/Jisshubot/pyrogram/zip/refs/heads/dev 
+pyrogram 
 tgcrypto 
 pymongo==4.8.0 
 motor==3.5.1 
 marshmallow==3.18.0 
 umongo==3.1.0 
-cinemagoer 
+
 Heroku3 
 search_engine_parser 
 wget 
@@ -50,6 +50,7 @@ apscheduler
 pyshorteners 
 pyromod 
 colorama
+lxml==5.1.0
 
 
 
