--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pymongo==4.8.0
 motor==3.5.1 
 marshmallow==3.18.0 
 umongo==3.1.0 
-
+cinemagoer
 Heroku3 
 search_engine_parser 
 wget 
@@ -39,7 +39,7 @@ opencv-python-headless==4.7.0.68
  humanize==4.6.0  
 
  psutil==5.9.4  
- NumPy  
+ numpy
  
  dnspython==2.3.0 
 python-decouple 
@@ -51,6 +51,7 @@ pyshorteners
 pyromod 
 colorama
 lxml==5.1.0
+
 
 
 
